Add animate.css to add flash function to h1 display and a shake function in user input.

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,13 @@ body {
   vertical-align: bottom;
 }
 
+.item {
+  -webkit-animation-duration: 3s;
+  -webkit-animation-iteration-count: 4;
+}
+
 h1 {
-  font-size: 75px
+  font-size: 85px
 }
 
 .form-control {
